--- a/Pagina_Ventas/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Pagina_Ventas/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,6 +18,33 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating">
+                <input asp-for="Input.NombreUsuario" class="form-control" aria-required="true" />
+                <label asp-for="Input.NombreUsuario"></label>
+                <span asp-validation-for="Input.NombreUsuario" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.ApellidoUsuario" class="form-control" aria-required="true" />
+                <label asp-for="Input.ApellidoUsuario"></label>
+                <span asp-validation-for="Input.ApellidoUsuario" class="text-danger"></span>
+            </div>
+
+
+            <div class="form-floating">
+                <input asp-for="Input.CpUsuario" class="form-control" aria-required="true" />
+                <label asp-for="Input.CpUsuario"></label>
+                <span asp-validation-for="Input.CpUsuario" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.DirUsuario" class="form-control" aria-required="true" />
+                <label asp-for="Input.DirUsuario"></label>
+                <span asp-validation-for="Input.DirUsuario" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="Input.UserName" class="form-control" aria-required="true" />
+                <label asp-for="Input.UserName"></label>
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.Password"></label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
